--- a/blocks/profile/__bio/profile__bio.css
+++ b/blocks/profile/__bio/profile__bio.css
@@ -10,12 +10,11 @@
   overflow: hidden;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 767px) {
   .profile__bio {
     text-align: center;
+    margin: 0 auto 36px;
     font-size: 14px;
-    font-weight: 400;
     line-height: 17px;
-    margin: 0 0 36px;
   }
 }
